--- a/sistema-gestion-energia-servicio/ems-persistence/ems-persistence.csproj
+++ b/sistema-gestion-energia-servicio/ems-persistence/ems-persistence.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ems-domain\ems-domain.csproj" />
+  </ItemGroup>
+
 </Project>
