--- a/sistema-gestion-energia-servicio/ems-service/ems-aplicacion.csproj
+++ b/sistema-gestion-energia-servicio/ems-service/ems-aplicacion.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ems-domain\ems-domain.csproj" />
+  </ItemGroup>
+
 </Project>
