--- a/sistema-gestion-energia-servicio/ems-persistence/ems-persistence.csproj
+++ b/sistema-gestion-energia-servicio/ems-persistence/ems-persistence.csproj
@@ -12,4 +12,12 @@
     <ProjectReference Include="..\ems-domain\ems-domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.4.24267.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0-preview.4.24267.1" />
+  </ItemGroup>
+
 </Project>
