--- a/sistema-gestion-energia-servicio/ems-persistence/ems-persistence.csproj
+++ b/sistema-gestion-energia-servicio/ems-persistence/ems-persistence.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0-preview.4.24267.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
